<resources>
    <string name="app_name">Alumni Portal Management</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="button_next">Next</string>
    <string name="button_cancel">Cancel</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="error_password">Password must contain at least 8 characters.</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="hint_email">Email ID</string>
    <string name="helper_email">Email ID</string>
    <string name="helper_password">Password</string>
    <string name="Login">Login</string>
    <string name="AppLogo">App Logo</string>
    <string name="TSearchByYear">Year</string>
    <string name="TSearchByCompany">Company</string>
    <string name="TAllAlumnus">All Alumnus</string>
    <string name="Report">Report</string>
    <string name="action_settings">Action Setting</string>
    <string name="action_logout">Logout</string>
    <string name="TEditInfo">Edit</string>
    <string name="Search">Search</string>
    <string name="TSearch">Search</string>
    <string name="FilterBy">Filter By</string>
    <string name="ShowAllAlumnus">Show all Alumnus</string>
    <string name="selectYear">Select Year</string>
    <string name="selectCompany">Select Company</string>
    <string name="SelectFilter">Select Filter</string>
    <string name="AlumniRegID">Reg. ID</string>
    <string name="AlumniName">Alumni Name</string>
    <string name="AlumniYearCompany">Alumni Filter</string>
    <string name="NoMoreAlumnusFound">No more Alumnus found</string>
    <string name="AlumniYear">Year</string>
    <string name="AlumniCompany">Company</string>
    <string name="scrollViewStart">Scroll view starts</string>
    <string name="scrollViewEnd">Scroll View ends</string>
    <string name="Year">Year</string>
    <string name="PlacedStudent">No. Placed Student</string>
    <string name="Company">Company</string>

</resources>