<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchAlumniFragment">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/SelectionMenus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/filterMenu"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:hint="@string/FilterBy">

                <AutoCompleteTextView
                    android:id="@+id/autoCompleteTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:text="@string/SelectFilter" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/yearPicker"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:hint="@string/FilterBy">

                <AutoCompleteTextView
                    android:id="@+id/autoCompleteYearPicker"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:text="@string/selectYear" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/companyPicker"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:hint="@string/FilterBy">

                <AutoCompleteTextView
                    android:id="@+id/autoCompleteCompanyPicker"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:text="@string/selectCompany" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/SearchAlumniListSection"
            android:layout_margin="16dp"
            android:layout_below="@+id/SelectionMenus"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/index"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/indAlmRegId"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/AlumniRegID"
                    android:layout_weight="1"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/indAlmName"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/AlumniName"
                    android:layout_weight="1"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/indAlmYear"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/AlumniYear"
                    android:layout_weight="1"
                    android:textColor="@color/black" />
                <TextView
                    android:id="@+id/indAlmCompany"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/AlumniCompany"
                    android:layout_weight="1"
                    android:textColor="@color/black" />

            </LinearLayout>


            <ListView xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/AlumniList"
                xmlns="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/index"
                tools:context=".SearchAlumniFragment" />

            <TextView
                android:id="@+id/NoMoreCustomerList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/AlumniList"
                android:layout_centerHorizontal="true"
                android:text="@string/NoMoreAlumnusFound" />
        </RelativeLayout>
    </RelativeLayout>
</FrameLayout>