<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".LoginFragment">


    <LinearLayout
        android:id="@+id/LLogin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingTop="30dp"
        android:textAlignment="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:padding="15dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="270dp"
                android:layout_height="190dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="20dp"
                android:contentDescription="@string/AppLogo"
                android:src="@drawable/alumni_management_portal_logos_transparent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/LoginTEmail"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email"
                android:padding="10dp"
                app:startIconDrawable="@drawable/baseline_email_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/LoginEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/LoginTPassword"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password"
                android:padding="10dp"
                app:endIconMode="password_toggle"
                app:startIconDrawable="@drawable/baseline_password_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/LoginPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>
            <Button
                android:id="@+id/LLoginSubmit"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/Login" />

        </LinearLayout>
    </LinearLayout>
</FrameLayout>