<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReportFragment">



    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ReportSelectionMenus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/filterMenu"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:hint="@string/FilterBy">

                <AutoCompleteTextView
                    android:id="@+id/autoCompleteTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:text="@string/SelectFilter" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/YearWisePlacedReport"
            android:layout_margin="16dp"
            android:layout_below="@+id/ReportSelectionMenus"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/RYearIndex"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/RYear"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/Year"
                    android:layout_weight="1"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/RYearPlaceCount"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/PlacedStudent"
                    android:layout_weight="1"
                    android:textColor="@color/black" />

            </LinearLayout>


            <ListView xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/CompanyWisePlaceList"
                xmlns="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/RYearIndex"
                tools:context=".SearchAlumniFragment" />
        </RelativeLayout>


        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/CompanyWisePlacedReport"
            android:layout_margin="16dp"
            android:layout_below="@+id/ReportSelectionMenus"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/RCompanyIndex"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/RCompany"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/Company"
                    android:layout_weight="1"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/RCompanyPlaceCount"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/PlacedStudent"
                    android:layout_weight="1"
                    android:textColor="@color/black" />
            </LinearLayout>


            <ListView xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/YearWisePlaceList"
                xmlns="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/RCompanyIndex"
                tools:context=".SearchAlumniFragment" />
        </RelativeLayout>




    </RelativeLayout>


</FrameLayout>